--- a/help.html
+++ b/help.html
@@ -84,7 +84,7 @@
 	<br>
     <ul>
         <li>Drag'n drop your source image at the top of the page, in the "drag'n drop an image here" panel</li>
-        <li>The 'Target Platform' combo-box allows you to choose between Amiga OCS, Atari ST and Atari STE</li>
+        <li>The 'Target Platform' combo-box allows you to choose between Amiga OCS, Atari ST, Atari STE, and PSX</li>
         <li>The 'HTML to Platform color conversion' combo-box allows you to choose how the image colors are converted to the Target Platform's palette. Here's the thing: HTML is using 8 bits per component (256 possibilities), while OCS and Atari STe have only 4 bits per component (Atari ST has 3 bits, etc.). There are 2 ways to perform the conversion:</li>
         <ul>- 'Clamp Color' will just cut the least significant bits, resulting in a slightly darker image.</ul>
         <ul>- 'Nearest Color' will reach to the nearest color (brighter or darker) depending on the lower bits.</ul>
