--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="js/viewEdit.js"></script>
     <script type="text/javascript" src="js/exporters2.js"></script>
     <script type="text/javascript" src="js/PSX.js"></script>
+    <script type="text/javascript" src="js/quadTree.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 <!-- ===================================== END HEADER ===================================== -->
@@ -116,6 +117,7 @@
               <div id="savePSX" style='background-color:rgba(200,200,200,0.5);'>
                 <center><h3><i>PSX Export</i></h3></center>
                 <button type="button" class="fa fa-files-o" onclick="savePSX_TIM16();"> Save 16 bits TIM</button>
+                <button type="button" class="fa fa-files-o" onclick="saveQuadTree();"> Save QuadTree</button>
             </div>
             <div id="saveBpl" style='background-color:rgba(200,200,200,0.5);'>
                 <center><h3><i>Bitplane Export</i></h3></center>
