update TIM export

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
               <div id="savePSX" style='background-color:rgba(200,200,200,0.5);'>
                 <center><h3><i>PSX Export</i></h3></center>
                 <button type="button" class="fa fa-files-o" onclick="savePSX_TIM16();"> Save 16 bits TIM</button>
+                <button type="button" class="fa fa-files-o" onclick="savePSX_TIM4();"> Save 4 bits TIM</button>
                 <button type="button" class="fa fa-files-o" onclick="saveQuadTree();"> Save QuadTree</button>
             </div>
             <div id="saveBpl" style='background-color:rgba(200,200,200,0.5);'>
