fixed pi1 export

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <center><h3><i>Bitplane Export</i></h3></center>
                 <button type="button" class="fa fa-files-o" onclick="saveBpl();"> Save Bitplanes</button>
                 &nbsp;(classic raw bitplane data)
-                <span id=pi1Span>Export as Degas pi1<input type="checkbox" id="pi1" name="pi1"></span>
+                <span id="pi1Span">Export as Degas pi1<input type="checkbox" id="pi1" name="pi1"></span>
                 <span id="xportBplOCSOptions">
                   &nbsp;&nbsp;&nbsp;bpl 1&nbsp;<input type="checkbox" id="xport1" name="xport1">
                   &nbsp;&nbsp;&nbsp;bpl 2&nbsp;<input type="checkbox" id="xport2" name="xport2">
