--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="js/PSX.js"></script>
     <script type="text/javascript" src="js/quadTree.js"></script>
     <script type="text/javascript" src="js/PNGRead.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/main2.js"></script>
 </head>
 <!-- ===================================== END HEADER ===================================== -->
 
