--- a/help.html
+++ b/help.html
@@ -19,8 +19,10 @@
     to get something to work on Windows, Mac, Linux, etc. Many will prefer command-line tools (and I agree), still it
      can be useful to have a GUI for some features, such as the color drag'n drop. Still, it works, and several demos and games
      used it, so I guess it's worth checking. Have fun!<br><i> - Soundy -</i><br>
-    <h3>Video Tutorial</h3>
-    You can check this (absolutely not comprehensive) tutorial as an intro:
+    <br>
+    Also check the <a href=help-st.html>Atari help page</a> that is also valid for Amiga and is more up to date
+    <br>
+     <h3>Video Introduction</h3>
     <br>
     <iframe width="905" height="509" src="https://www.youtube.com/embed/MieqMg56DEo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
     </iframe>
