--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 &nbsp;&nbsp;&nbsp;count&nbsp;<input type="text" id="sprtC" name="sprtC" onchange="onSprtC()" size="8">
                 <!-- &nbsp;&nbsp;&nbsp;<a href="#viewCanvas" onclick="document.getElementById('viewShow').value='viewShow_sprites'";>Preview</a> -->
                 <br><b>include header words</b>&nbsp;<input type="checkbox" id="includeCtrl" name="includeCtrl">&nbsp;&nbsp;<i>(will add the 2 control words needed for DMA use at the begining of the sprite data)</i>
-                <br><b>include stop words</b>&nbsp;<input type="checkbox" id="includeDMAStop" name="includeDMAStop">&nbsp;&nbsp;<i>(will add 2 empty words (dc.w 0,0) at the end of the sprite data to stop the DMA)</i>
+                <br><b>include stop words</b>&nbsp;<input type="checkbox" id="includeDMAStop" name="includeDMAStop">&nbsp;&nbsp;<i>(will add 2 empty words at the end of the sprite data to stop the DMA)</i>
                 <br><b>include palette</b>&nbsp;<input type="checkbox" id="includePal" name="includePal">
                 &nbsp;&nbsp;&nbsp;screen X&nbsp;<input type="text" id="sprtScrX" name="sprtScrX" size="8">
                 &nbsp;&nbsp;&nbsp;screen Y&nbsp;<input type="text" id="sprtScrY" name="sprtScrY" size="8">
