--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <br><b>include header words</b>&nbsp;<input type="checkbox" id="includeCtrl" name="includeCtrl">&nbsp;&nbsp;<i>(will add the 2 control words needed for DMA use at the begining of the sprite data)</i>
                 <br><b>include stop words</b>&nbsp;<input type="checkbox" id="includeDMAStop" name="includeDMAStop">&nbsp;&nbsp;<i>(will add 2 empty words at the end of the sprite data to stop the DMA)</i>
                 <br><b>include palette</b>&nbsp;<input type="checkbox" id="includePal" name="includePal">
-                &nbsp;&nbsp;&nbsp;screen X&nbsp;<input type="text" id="sprtScrX" name="sprtScrX" size="8">
+                <br>&nbsp;&nbsp;&nbsp;screen X&nbsp;<input type="text" id="sprtScrX" name="sprtScrX" size="8">
                 &nbsp;&nbsp;&nbsp;screen Y&nbsp;<input type="text" id="sprtScrY" name="sprtScrY" size="8">
                 &nbsp;&nbsp;&nbsp;HSTART ofs&nbsp;<input type="text" id="sprtOfsX" name="sprtOfsX" size="8">
                 &nbsp;&nbsp;&nbsp;VSTART ofs&nbsp;<input type="text" id="sprtOfsY" name="sprtOfsY" size="8">
