--- a/help-st.html
+++ b/help-st.html
@@ -80,8 +80,7 @@
 <!-- ===================================== START FOOTER ===================================== -->
 <div class="clear"></div>
 <div id="footer">
-    <img src="data/logo.png">
-    <br>All bugs by Soundy - soundydeadliners at gmail.com
+    <img src="data/logo.png" style="width:10%">
 </div>
 
 </body></html>
