--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ﻿<!DOCTYPE html>
 <html><head>
     <title>Bitmap Exporter</title>
+    <link rel="icon" type="image/x-icon" href="icon.ico">
+    <link rel="shortcut icon" href="icon.ico"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -260,8 +262,8 @@
          </div>
          <!-- ===================================== START FOOTER ===================================== -->
           <div id="footer">
-                <img src="data/logo.png">
-                <br>All bugs by Soundy - soundydeadliners at gmail.com
+                <img src="data/logo.png" style="width:10%">
+                <br>soundydeadliners at gmail.com
           </div>
 
       </body></html>
