import gradient master

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                   <option value=loadpalettefrom_binary>.bin (file)</option>
                   <option value=loadpalettefrom_asm>.asm (file)</option>
                   <option value=loadpalettefrom_clip>.asm (clipboard)</option>
+                  <option value=loadpalettefrom_gradientMaster>Gradient Master data</option>
                   </select>
                 <div id='paletteColors' style='background-color:rgba(200,200,200,0.5);'>
                 </div>
@@ -264,6 +265,15 @@
           <div id="footer">
                 <img src="data/logo.png" style="width:10%">
                 <br>soundydeadliners at gmail.com
+          </div>
+
+          <!-- MODAL BOX -->
+          <div id="myModal" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <p id="modalContent"></p>
+              <center><button id="modalclose">OK</button></center>
+            </div>
           </div>
 
       </body></html>
