--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   <option value=loadpalettefrom_binary>.bin (file)</option>
                   <option value=loadpalettefrom_asm>.asm (file)</option>
                   <option value=loadpalettefrom_clip>.asm (clipboard)</option>
-                  <option value=loadpalettefrom_gradientMaster>Gradient Master data</option>
+                  <option value=loadpalettefrom_gradientMaster>dc.w list</option>
                   </select>
                 <div id='paletteColors' style='background-color:rgba(200,200,200,0.5);'>
                 </div>
