added partial bitplane export for Atari platforms

--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
                   &nbsp;&nbsp;&nbsp;bpl 5&nbsp;<input type="checkbox" id="xport5" name="xport5">                
                   &nbsp;&nbsp;&nbsp;Interleave&nbsp;<input type="checkbox" id="xportInterleave" name="xportInterleave">
                 </span>
+                <span id="xportBplAtariOptions">
+                  &nbsp;&nbsp;&nbsp;bpl 1&nbsp;<input type="checkbox" id="ST_xport1" name="ST_xport1">
+                  &nbsp;&nbsp;&nbsp;bpl 2&nbsp;<input type="checkbox" id="ST_xport2" name="ST_xport2">
+                  &nbsp;&nbsp;&nbsp;bpl 3&nbsp;<input type="checkbox" id="ST_xport3" name="ST_xport3">
+                  &nbsp;&nbsp;&nbsp;bpl 4&nbsp;<input type="checkbox" id="ST_xport4" name="ST_xport4">
+                </span>
                 <br><br><button type="button" class="fa fa-file-image-o" onclick="saveRaw();"> RAW RGB</button>
                 &nbsp;(12 bit RGB stored on 16 bits per pix)
                 <br><br><button type="button" class="fa fa-file-text-o" onclick="save4Bit();"> 4bit Indexes</button>
