added import palette from pi1

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                 <br><button onclick="importPalette()">Import</button>
                 &nbsp;from:&nbsp;<select id="loadpalettefrom">
                   <option value=loadpalettefrom_png>.png (file)</option>
+                  <option value=loadpalettefrom_pi1>.pi1 (file)</option>
                   <option value=loadpalettefrom_binary>.bin (file)</option>
                   <option value=loadpalettefrom_asm>.asm (file)</option>
                   <option value=loadpalettefrom_clip>.asm (clipboard)</option>
